# GaussianSplattingProject

./: .gitignore  CLAUDE.md  README.md  camera.py  environment.yml  gs_demo.py  install.sh  render.py  requirements.txt  run.py  train.py
arguments/: __init__.py
diff_gaussian_rasterization/: __init__.py  setup.py
diff_gaussian_rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  ext.cpp  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
gaussian_rasterizer/: ext.cpp  rasterizer_impl.cu  rasterizer_impl.h
gaussian_splatting/: camera.py  config.py  gaussian_model.py  hyperparameters.py  loss.py  math_utils.py  render_settings.py  renderer.py  sh_constants.py
gaussian_splatting/scene/: cameras.py  dataset.py  dataset_readers.py  gaussian_model.py  scene.py
gaussian_splatting/utils/: general_utils.py  graphics_utils.py  loss_utils.py  sh_utils.py
rasterizer/: CMakeLists.txt  gs_rasterizer.cpp  pyproject.toml  rasterize.cu  rasterize.cuh  rasterizer.py  render.cpp  settings.hpp  test.cpp  util.cu  util.cuh  wrapper.cu  wrapper.hpp
tests/: test_cameras.py  test_gaussian_model.py  test_loss.py  test_math_utils.py  test_rasterizer.py  test_renderer.py
